--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,9 @@ _site/
 # counterproductive to check this file into the repository.
 # Details at https://github.com/github/pages-gem/issues/768
 Gemfile.lock
+/.vs
+/src/Elevator/.vs
+/src/Elevator/Apps/Elevator.ConsoleApp/obj
+/src/Elevator/Apps/Elevator.Domain/obj
+/src/Elevator/Apps/Elevator.ConsoleApp/bin/Debug/net6.0
+/src/Elevator/Apps/Elevator.Domain/bin/Debug/net6.0
